# 100-Projects-of-Code

./: .gitignore  .gitmodules  README.md
02. HTTP Web Server/: README.md
04. Port Scanner/: README.md  portwine.py
10. Blog/: README.md  _config.yml  index.html  style.scss
10. Blog/_posts/: 2023-02-02-my-first-post.markdown  2023-02-03-welcome-to-jekyll.markdown
10. Blog/_site/: feed.xml  index.html
13. IP to Country/: README.md  go.mod  ip2country.go  ip2country_test.go
22. Text Editor/: README.md  kilo  kilo.c
31. URL Shortener/: README.md  config.php  database.sql  index.php  shortener.php
4. Port Scanner/: scanner.py
46. Spam Classifier/: README.md  classifier.py
57. Sorting Visualizer/: README.md
64. Codec/: CMakeLists.txt  README.md
64. Codec/example/: CMakeLists.txt  main.cpp  type_support_wrapper.cpp
64. Codec/src/: base32_crockford.hpp  base32_crockford_default.hpp  base32_hex.hpp  base32_hex_default.hpp  base32_rfc4648.hpp  base32_rfc4648_default.hpp  base64_rfc4648.hpp  base64_rfc4648_default.hpp  base64_url.hpp  base64_url_default.hpp  base64_url_unpadded.hpp  base64_url_unpadded_default.hpp  hex_lower.hpp  hex_lower_default.hpp  hex_upper.hpp  hex_upper_default.hpp  parse_error.hpp
64. Codec/test/: CMakeLists.txt  benchmark.cpp  minimal_decode.cpp  test.cpp
64. Codec/tool/: CMakeLists.txt  base32dec.cpp  base32enc.cpp  base64dec.cpp  base64enc.cpp  hexdec.cpp  hexenc.cpp
68. Password Strength Checker/: Makefile  README.md  bower.json  package.json
73. Snake/: README.md  snake.py
98. Roman to Decimal Converter/: README.md
(+12 files in other folders)
